--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -12,7 +12,7 @@ api.workspace = true
 arrow.workspace = true
 chrono.workspace = true
 clap.workspace = true
-client.workspace = true
+# client.workspace = true
 common-base.workspace = true
 common-telemetry.workspace = true
 common-wal.workspace = true
