--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -60,6 +60,8 @@ table.workspace = true
 tokio.workspace = true
 toml.workspace = true
 tonic.workspace = true
+#pipeline = { git = "ssh://git@github.com/GreptimeTeam/pipeline.git", rev = "6b88c3c627da9e20f8fd160071e9c69b3ebd4e6a" }
+pipeline = { path = "../../../pipeline" }
 
 [dev-dependencies]
 catalog.workspace = true
