chore: add pipeline private table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ members = [
     "src/index",
     "tests-fuzz",
     "tests-integration",
-    "tests/runner",
+    "tests/runner", "src/pipeline",
 ]
 resolver = "2"
 
@@ -227,6 +227,7 @@ promql = { path = "src/promql" }
 puffin = { path = "src/puffin" }
 query = { path = "src/query" }
 script = { path = "src/script" }
+pipeline = { path = "src/pipeline" }
 servers = { path = "src/servers" }
 session = { path = "src/session" }
 sql = { path = "src/sql" }
