--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -44,6 +44,7 @@ meta-client.workspace = true
 opentelemetry-proto.workspace = true
 operator.workspace = true
 partition.workspace = true
+pipeline = { workspace = true }
 prometheus.workspace = true
 prost.workspace = true
 query.workspace = true
@@ -61,7 +62,6 @@ tokio.workspace = true
 toml.workspace = true
 tonic.workspace = true
 #pipeline = { git = "ssh://git@github.com/GreptimeTeam/pipeline.git", rev = "6b88c3c627da9e20f8fd160071e9c69b3ebd4e6a" }
-pipeline = { path = "../../../pipeline" }
 
 [dev-dependencies]
 catalog.workspace = true
