change profile to dev
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -217,7 +217,7 @@ jobs:
         run: |
           cd tests-fuzz &
           cargo install cargo-gc-bin &
-          cargo gc --release &
+          cargo gc &
           cd ..
       - name: Run Fuzz Test
         uses: ./.github/actions/fuzz-test
