--- a/src/common/query/Cargo.toml
+++ b/src/common/query/Cargo.toml
@@ -4,12 +4,16 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+testing = []
+
 [lints]
 workspace = true
 
 [dependencies]
 api.workspace = true
 async-trait.workspace = true
+bytes.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-recordbatch.workspace = true
