--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -16,6 +16,7 @@ arrow-schema.workspace = true
 async-recursion = "1.0"
 async-stream.workspace = true
 async-trait = "0.1"
+bytes.workspace = true
 catalog.workspace = true
 chrono.workspace = true
 common-base.workspace = true
@@ -28,11 +29,13 @@ common-meta.workspace = true
 common-plugins.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
+common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
+datafusion-functions.workspace = true
 datafusion-optimizer.workspace = true
 datafusion-physical-expr.workspace = true
 datafusion-sql.workspace = true
@@ -41,6 +44,7 @@ futures = "0.3"
 futures-util.workspace = true
 greptime-proto.workspace = true
 humantime.workspace = true
+itertools.workspace = true
 lazy_static.workspace = true
 meter-core.workspace = true
 meter-macros.workspace = true
@@ -49,6 +53,7 @@ once_cell.workspace = true
 prometheus.workspace = true
 promql.workspace = true
 promql-parser.workspace = true
+prost.workspace = true
 regex.workspace = true
 session.workspace = true
 snafu.workspace = true
@@ -63,6 +68,7 @@ approx_eq = "0.1"
 arrow.workspace = true
 catalog = { workspace = true, features = ["testing"] }
 common-macro.workspace = true
+common-query = { workspace = true, features = ["testing"] }
 format_num = "0.1"
 num = "0.4"
 num-traits = "0.2"
