--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -58,6 +58,7 @@ regex.workspace = true
 session.workspace = true
 snafu.workspace = true
 sql.workspace = true
+sqlparser.workspace = true
 store-api.workspace = true
 substrait.workspace = true
 table.workspace = true
