chore(ci): disable caching targets

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -155,6 +155,7 @@ jobs:
         with:
           # Shares across multiple jobs
           shared-key: "fuzz-test-targets"
+          cache-targets: "false"
       - name: Set Rust Fuzz
         shell: bash
         run: |
@@ -206,6 +207,7 @@ jobs:
         with:
           # Shares across multiple jobs
           shared-key: "fuzz-test-targets"
+          cache-targets: "false"
       - name: Set Rust Fuzz
         shell: bash
         run: |
@@ -307,6 +309,7 @@ jobs:
         with:
           # Shares across multiple jobs
           shared-key: "fuzz-test-targets"
+          cache-targets: "false"
       - name: Set Rust Fuzz
         shell: bash
         run: |
