--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -56,8 +56,8 @@ puffin.workspace = true
 rand.workspace = true
 regex = "1.5"
 rskafka = { workspace = true, optional = true }
-rstest = { version = "0.20", optional = true }
-rstest_reuse = { version = "0.7", optional = true }
+rstest = { workspace = true, optional = true }
+rstest_reuse = { workspace = true, optional = true }
 serde.workspace = true
 serde_json.workspace = true
 serde_with.workspace = true
@@ -78,8 +78,8 @@ criterion = "0.4"
 log-store.workspace = true
 object-store = { workspace = true, features = ["services-memory"] }
 rskafka.workspace = true
-rstest = { version = "0.20" }
-rstest_reuse = { version = "0.7" }
+rstest.workspace = true
+rstest_reuse.workspace = true
 toml.workspace = true
 
 [[bench]]
