--- a/src/pipeline/Cargo.toml
+++ b/src/pipeline/Cargo.toml
@@ -6,7 +6,6 @@ license.workspace = true
 
 [features]
 
-
 [lints]
 workspace = true
 
@@ -20,24 +19,25 @@ common-catalog.workspace = true
 common-error.workspace = true
 common-function.workspace = true
 common-macro.workspace = true
+common-meta.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
-common-meta.workspace = true
 console = "0.15"
 crossbeam-utils.workspace = true
-datafusion = { workspace = true}
-datafusion-common = { workspace = true}
-datafusion-expr = { workspace = true}
-datafusion-functions = { workspace = true}
-datafusion-physical-expr = { workspace = true}
+datafusion = { workspace = true }
+datafusion-common = { workspace = true }
+datafusion-expr = { workspace = true }
+datafusion-functions = { workspace = true }
+datafusion-physical-expr = { workspace = true }
 datatypes.workspace = true
 futures.workspace = true
 lazy_static.workspace = true
 once_cell.workspace = true
-paste = { workspace = true}
+paste = { workspace = true }
+pipeline = { git = "ssh://git@github.com/GreptimeTeam/pipeline.git", rev = "3eb890c551b8d7f60c4491fcfec18966e2b210a4" }
 prometheus.workspace = true
 query.workspace = true
 servers.workspace = true
@@ -46,7 +46,6 @@ snafu.workspace = true
 sql.workspace = true
 table.workspace = true
 tokio.workspace = true
-pipeline = { path = "../../../pipeline" }
 
 [dev-dependencies]
 catalog = { workspace = true, features = ["testing"] }
