--- a/.github/actions/setup-greptimedb-cluster/action.yml
+++ b/.github/actions/setup-greptimedb-cluster/action.yml
@@ -23,7 +23,7 @@ inputs:
     default: "etcd.etcd-cluster.svc.cluster.local:2379"
     description: "Etcd endpoints"
   values-filename:
-    default: "values.yaml"
+    default: "with-minio.yaml"
     
 
 runs:
@@ -57,12 +57,6 @@ runs:
         --set frontend.replicas=${{ inputs.frontend-replicas }} \
         --set datanode.replicas=${{ inputs.datanode-replicas }} \
         --set meta.replicas=${{ inputs.meta-replicas }} \
-        --set objectStorage.s3.bucket=default \
-        --set objectStorage.s3.region=us-west-2 \
-        --set objectStorage.s3.root=test-root \
-        --set objectStorage.s3.endpoint=http://minio.minio.svc.cluster.local \
-        --set objectStorage.credentials.accessKeyId=rootuser \
-        --set objectStorage.credentials.secretAccessKey=rootpass123 \
         greptime/greptimedb-cluster \
         --create-namespace \
         -n my-greptimedb \
