--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -22,7 +22,7 @@ arrow-ipc.workspace = true
 arrow-schema.workspace = true
 async-trait = "0.1"
 auth.workspace = true
-axum.workspace = true
+axum = {workspace=true,features = ["multipart"]}
 axum-macros = "0.3.8"
 base64.workspace = true
 bytes.workspace = true
