fix: update config

--- a/.github/actions/setup-greptimedb-cluster/with-minio.yaml
+++ b/.github/actions/setup-greptimedb-cluster/with-minio.yaml
@@ -4,6 +4,10 @@ meta:
     read_rt_size = 8
     write_rt_size = 8
     bg_rt_size = 8
+    
+    [datanode]
+    [datanode.client]
+    timeout = "60s"
 datanode:
   config: |-
     [runtime]
@@ -16,6 +20,9 @@ frontend:
     read_rt_size = 8
     write_rt_size = 8
     bg_rt_size = 8
+
+    [meta_client]
+    ddl_timeout = "60s"
 objectStorage:
   s3:
     bucket: default
