--- a/src/pipeline/Cargo.toml
+++ b/src/pipeline/Cargo.toml
@@ -28,6 +28,7 @@ common-telemetry.workspace = true
 common-time.workspace = true
 crossbeam-utils.workspace = true
 csv = "1.3.0"
+dashmap.workspace = true
 datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
