--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -292,6 +292,10 @@ jobs:
             minio: true
             kafka: false
             values: "with-minio.yaml"
+          - name: "Minio with Cache"
+            minio: true
+            kafka: false
+            values: "with-minio-and-cache.yaml"
           - name: "Remote WAL"
             minio: true
             kafka: true
