chore: Revert "ci: enable debug log"
This reverts commit 17eff2a045a0561296f2dbb8366f7a46fe8bfe2e.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -252,7 +252,7 @@ incremental = false
 
 [profile.ci]
 inherits = "dev"
-debug = 1
+strip = true
 
 [profile.dev.package.sqlness-runner]
 debug = false
