feat: add RemoteJobScheudler in schedule_compaction_request()

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -70,6 +70,7 @@ tokio.workspace = true
 tokio-stream.workspace = true
 tokio-util.workspace = true
 uuid.workspace = true
+log = "0.4.21"
 
 [dev-dependencies]
 common-procedure-test.workspace = true
