--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -21,6 +21,7 @@ chrono.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
 common-error.workspace = true
+common-query.workspace = true
 common-grpc-expr.workspace = true
 common-macro.workspace = true
 common-procedure.workspace = true
