feat: implement the `OrderedBatchProducer`

--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -44,4 +44,5 @@ common-wal = { workspace = true, features = ["testing"] }
 itertools.workspace = true
 rand.workspace = true
 rand_distr = "0.4"
+rskafka = { workspace = true, features = ["unstable-fuzzing"] }
 uuid.workspace = true
