--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -30,6 +30,7 @@ common-function.workspace = true
 common-meta.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
+datafusion.workspace = true
 datafusion-physical-expr.workspace = true
 enum-as-inner = "0.6.0"
 greptime-proto.workspace = true
@@ -52,6 +53,7 @@ table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 
+arrow-schema.workspace = true
 [dev-dependencies]
 catalog.workspace = true
 common-catalog.workspace = true
