--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -15,6 +15,7 @@ common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-recordbatch.workspace = true
+common-time.workspace = true
 common-wal.workspace = true
 datafusion-expr.workspace = true
 datafusion-physical-plan.workspace = true
