--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -9,6 +9,7 @@ workspace = true
 
 [dependencies]
 api.workspace = true
+bytes.workspace = true
 catalog.workspace = true
 common-base.workspace = true
 common-decimal.workspace = true
