--- a/src/pipeline/Cargo.toml
+++ b/src/pipeline/Cargo.toml
@@ -52,6 +52,7 @@ table.workspace = true
 tokio.workspace = true
 urlencoding = "2.1"
 yaml-rust = "0.4"
+moka = { workspace = true, features = ["sync"] }
 
 [dev-dependencies]
 catalog = { workspace = true, features = ["testing"] }
