--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -175,7 +175,7 @@ broker_endpoints = ["127.0.0.1:9092"]
 ## The max size of a single producer batch.
 ## Warning: Kafka has a default limit of 1MB per message in a topic.
 ## **It's only used when the provider is `kafka`**.
-max_batch_size = "1MB"
+max_batch_bytes = "1MB"
 
 ## Request channel size of each `OrderedBatchProducer`.
 ## **It's only used when the provider is `kafka`**.
